# NovaFund

./: .gitignore  commit_msg.txt
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260325000000_add_minted_tokens/: migration.sql
backend/src/: user.controller.ts
backend/src/graphql/: gql-throttler.guard.ts
backend/src/indexer/services/: event-handler.service.ts  indexer.service.ts
backend/src/indexer/types/: event-types.ts
contracts/: Cargo.toml  UPGRADABLE_PROXY_GOVERNANCE.md
contracts/base-token/: Cargo.toml
contracts/base-token/src/: lib.rs  test.rs
contracts/base-token/test_snapshots/test/: test_transfer_dust.1.json  test_transfer_insufficient_balance.1.json  test_transfer_with_fees.1.json
contracts/escrow/: IMPLEMENTATION.md
contracts/escrow/src/: lib.rs  storage.rs  tests.rs  yield_router.rs
contracts/escrow/test_snapshots/tests/: test_cancel_upgrade_clears_pending.1.json  test_claim_yield_no_yield.1.json  test_create_milestone.1.json  (+38 more)
contracts/governance/src/: lib.rs
contracts/identity/src/: identity_registry.rs  identity_registry_test.rs  lib.rs  test.rs
contracts/limit-orders/src/: tests.rs
contracts/project-launch/src/: lib.rs  test.rs  upgrade.rs
contracts/shared/src/: errors.rs  event_upgrade.rs  events.rs  lib.rs  types.rs  upgrade.rs  upgrade_audit.rs
contracts/treasury/src/: lib.rs
contracts/upgrade-audit-query/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/components/: AuditBadge.tsx  ProjectDetail.tsx
(+22 files in other folders)
